--- a/Wolfenstein.cbp
+++ b/Wolfenstein.cbp
@@ -31,6 +31,10 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="OpcoesDoMenu.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="OpcoesDoMenu.h" />
 		<Unit filename="booleanas.c">
 			<Option compilerVar="CC" />
 		</Unit>
